✨ Update accountDropdown type from button to dropdown in accountInfo.yml

--- a/demo/src/test/resources/accountInfo.yml
+++ b/demo/src/test/resources/accountInfo.yml
@@ -6,7 +6,7 @@ accountInfo:
     value: "chandra shekhar pandey"
 
   accountDropdown:
-    type: button
+    type: dropdown
     locator: "select[id='accountType']"
     locatorType: css
     value: "current"
